<resources>
    <string name="app_name">TodoAssignment</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="title_placeholder">Title: %s</string>
    <string name="category_placeholder">Category: %s</string>
    <string name="description_placeholder">Description: %s</string>
    <string name="date_placeholder">Date: %s</string>
    <string name="priority_placeholder">Priority: %s</string>
    <string name="task_edit">Edit Task</string>
    <string name="task_delete">Delete Task</string>
    <string name="task_complete">Mark as Completed</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="todo_list">Todo List</string>

    <string name="task_delete_msg">Are you sure you want to delete this task?</string>
    <string name="task_completed_msg">Are you sure you want to mark this task as completed?</string>

    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="priority">Priority</string>
    <string name="filter_by_Category">Filter by Category</string>
    <string name="all_field_required">Please fill all the fields</string>

    <string name="task_added">Task Added: %s</string>
    <string name="task_deleted">Task Deleted: %s</string>
    <string name="task_updated">Task Updated: %s</string>
    <string name="task_completed">Task Completed: %s</string>
    <string name="search_tasks">Search tasks</string>

    <string name="sort_by_priority">Sort by Priority</string>
    <string name="sort_by_due_date">Sort by Due Date</string>
    <string name="sort_by_completeness">Sort by Completeness</string>
    <string name="sort_by">Sort By</string>

    <string-array name="priority_levels">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>