<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_primary"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextViewHeadingStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCategory"
            style="@style/TextViewNormalStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            style="@style/TextViewNormalStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPriority"
            style="@style/TextViewNormalStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/priority_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            style="@style/TextViewNormalStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriority" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutTaskButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:contentDescription="@string/task_edit"
                android:background="@drawable/circular_shape"
                android:src="@drawable/ic_edit" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/task_delete"
                android:background="@drawable/circular_shape"
                android:src="@drawable/ic_delete" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/task_complete"
                android:background="@drawable/circular_shape"
                android:src="@drawable/ic_done" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>